# dogma-snippets

./: .gitignore  run.cmd
arc/: hello.arc
clojure/: Monpetit.java  adventure-game.clj  cd-field.clj  gen-hanja-table-hashmap.clj  gen-hanja-table.clj  hanja-table.tbl  hashmultimap-test.clj  hello2.clj  hello3.clj  hello4.clj  hello5-fact.clj  hello6-error.clj  hello7.clj  hello8.clj  snake.clj  sql-test.clj  strbuf-test.clj  translate-hanja-hashmap.clj  translate-hanja-strbuf.clj  translate-hanja.clj
cxx/: bitset_test.cpp  boost_signal-2.cpp  boost_signal.cpp  double-pointer-test.cpp  gorun.cpp  hello.cpp  iconv_string.cpp  memcpy-test.cpp  raw_buffer.cpp  shared_ptr_utf8.cpp  system.c  xaudio2_demo.cpp
cxx/noncopyable/: CMakeLists.txt  main.cpp
cxx/regex2/: CMakeLists.txt  main.cpp
d/: hello.d  md5_test.d  metatags.d  readme.txt  work.d
embedded/: time.c  time.h
erlang/: area_server0.erl  area_server1.erl  area_server_final.erl  clock.erl  ctemp.erl  demo.erl  dnc.erl  dnq.erl  echo.erl  erldnc.erl  example.erl  except_test.erl  fileutils.erl  frequency.erl  generate_hanja_dict.erl  generate_hanja_dict_mnesia.erl  kvs.erl  kvs2.erl  listutils.erl  mathstuff.erl  misc.erl  ms.erl  myring.erl  pmap.erl  processes.erl  shop.erl  shop1.erl  socket_examples.erl  stimer.erl  test.erl  udp_test.erl  utf8.erl
gtk/: glibmm-convert-test.cpp
java/: PetitException.java  Tickets.java
lisp/: a.sh  adventure.el  adventure.lisp  asdf-test.lisp  ccl-test.lisp  clisprc.lisp  defclass-star-test.lisp  defclass-star-test2.lisp  dogma-test.lisp  dogma.lisp  errors.lisp  (+51 more)
(+84 files in other folders)
